@@ -4241,4 +4241,6 @@ backtracking verbs. --/
      
 /((?J)(?'R'(?'R'(?'R'(?'R'(?'R'(?|(\k'R'))))))))/
 
+/\N(?(?C)0?!.)*/
+
 /-- End of testinput2 --/
